Bug fixed, improve UI, popular tray done

--- a/src/_media.scss
+++ b/src/_media.scss
@@ -33,3 +33,9 @@
         @content;
     }
 }
+
+@mixin media_custom($size){
+    @media screen and (max-width: $size){
+        @content;
+    }
+}
