--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -1,4 +1,5 @@
 @import "../../variables";
+@import "../../media";
 
 .card{
     margin-inline: 4px;
@@ -6,12 +7,15 @@
     background-color: var(--primary-color);
     color: var(--text-color);
     overflow: hidden;
+    margin-block: 1em;
+    
     .cardImgContainer{
         aspect-ratio: 3/4;
         overflow: hidden;
         position: relative;
 
         img{
+            
             width: 100%;
             object-fit: cover;
             object-position: top;
@@ -22,18 +26,25 @@
             z-index: 2;
             bottom: 0.5em;
             right: 0.5em;
+            left: 0.5em;
             display: flex;
             gap: 0.25em;
             flex-wrap: wrap;
-            width: 50%;
             justify-content: flex-end;
             font-size: calc(0.2vw + 12px);
             color: $dark-color;
+
             span{
-                background-color: $yellow-color;
+                background-color: var(--genres-bg);
+                color: var(--genres-text);
                 padding: 0 0.5em;
                 border-radius: 0.25em;
             }
+
+            @include media_sm{
+                display: none;
+            }
+
         }
 
         .gradient{
@@ -43,16 +54,26 @@
             position: absolute;
             bottom: 0;
             z-index: 1;
+
+            
         }
     }
 
     .cardDetails{
         padding: 0.5em;
         position: relative;
+        white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
 
         .name{
             font-size: calc(0.2vw + 1rem);
             text-transform: capitalize;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
+
+        
     }
 }
