--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -8,6 +8,25 @@
     color: var(--text-color);
     overflow: hidden;
     margin-block: 1em;
+    cursor: pointer;
+    overflow: hidden;
+    position: relative;
+
+    &:hover::before{
+        display: block;
+    }
+    
+    &::before{
+        display: none;
+        position: absolute;
+        content: "";
+        width: 100%;
+        height: 100%;
+        background: var(--text-color);
+        opacity: 0.2;
+        z-index: 5;
+    }
+    
     
     .cardImgContainer{
         aspect-ratio: 3/4;
@@ -19,6 +38,8 @@
             width: 100%;
             object-fit: cover;
             object-position: top;
+            transform: scale(1);
+            
         }
 
         .genres{
@@ -76,4 +97,6 @@
 
         
     }
+
+    
 }
