--- a/src/components/CarouselContainer/CarouselContainer.module.scss
+++ b/src/components/CarouselContainer/CarouselContainer.module.scss
@@ -1,3 +1,5 @@
+@import "../../media";
+
 .carouselContainer{
     header{
 
@@ -8,6 +10,10 @@
 
         h2{
             color: var(--text-color);
+
+            @include media_sm{
+                font-size: 20px;
+            }
         }
     }
 }
