--- a/src/components/Rating/Rating.module.scss
+++ b/src/components/Rating/Rating.module.scss
@@ -4,7 +4,7 @@
     width: 40px;
     height: 40px;
     position: absolute;
-    top: 25px;
+    top: 10px;
     left: 10px;
     flex-shrink: 0;
     z-index: 3;
@@ -21,6 +21,8 @@
         // display: none;
         width: 30px;
         height: 30px;
+        top: 5px;
+        left: 5px;
     }
     
 }
