--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -9,7 +9,7 @@
     width: 100%;
     top: 0;
     background-color: var(--nav-bg);
-    z-index: 1000;
+    z-index: 2000;
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
     *:not(svg){
@@ -113,9 +113,11 @@
         width: 200px;
         top: calc(100% + 5px);
         transition: all 200ms ease-in-out;
+        display: none;
         
 
         @include media_md{
+            display: block;
            li{
             margin: 10px 0;
            }
