--- a/src/components/toggleButton/ToggleButton.module.scss
+++ b/src/components/toggleButton/ToggleButton.module.scss
@@ -1,3 +1,5 @@
+@import "../../media";
+
 .toggleWrapper{
     
     border-radius: 999px;
@@ -17,6 +19,11 @@
             cursor: pointer;
             font-weight: 700;
             color: var(--primary-color);
+
+            @include media_sm{
+                font-size: 14px;
+                width: 60px;
+            }
         }
     
         
@@ -32,6 +39,10 @@
             border-radius: 999px;
             transform: translate(0);
             transition: transform 250ms ease;
+
+            @include media_sm{
+                width: 60px;
+            }
         }
     
 
