--- a/src/index.scss
+++ b/src/index.scss
@@ -14,6 +14,7 @@
     --genres-text: #242424;
     --card-shadow: rgba(0,0,0,0.3);
     --rate-bg: rgba(255,255,255,0.6);
+    --text-color-opac: rgba(221,221,221,0.4)
 }
 
 [data-theme="light"]{
@@ -29,6 +30,7 @@
     --genres-text: #dddddd;
     --card-shadow: rgba(0,0,0,0.3);
     --rate-bg: rgba(255,255,255,0.4);
+    --text-color-opac: rgba(36,36,36,0.4)
 }
 
 .nav-scroll{
@@ -156,4 +158,56 @@ body{
         color: var(--text-color);
     }
         
+}
+
+
+.rating{
+    
+    flex-shrink: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #f6f6f6;
+    svg{
+        line-height: 0;
+    }
+
+    
+    
+}
+
+.rating::before{
+    content: '';
+    position: absolute;
+    background: #242424;
+    border-radius: 50%;
+    z-index: -1;
+    top: -1px;
+    left: -1px;
+    right: -1px;
+    bottom: -1px;
+}
+
+.rating__card{
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    z-index: 1;
+
+    @include media_sm{
+        // display: none;
+        width: 30px;
+        height: 30px;
+        top: 5px;
+        left: 5px;
+    }
+}
+
+.rating__details{
+    position: relative;
+    width: 70px;
+    height: 70px;
+    
 }
