--- a/src/components/videoPopup/VideoPopUp.scss
+++ b/src/components/videoPopup/VideoPopUp.scss
@@ -10,6 +10,7 @@
     opacity: 0;
     visibility: hidden;
     z-index: 9;
+    padding: 1em;
     .opacityLayer {
         position: absolute;
         top: 0;
